fix avatar overflow

--- a/src/components/core/Avatar/styles.scss
+++ b/src/components/core/Avatar/styles.scss
@@ -14,6 +14,7 @@ $size-badge: 16px;
   border: 1px solid $slate--100;
   display: flex;
   align-items: center;
+  overflow: hidden;
 
   // shapes
   &.circle {
